angular: fix certificaitons overflow

--- a/Angular/src/app/certification/certification.component.css
+++ b/Angular/src/app/certification/certification.component.css
@@ -15,13 +15,13 @@
     padding: 1rem;
     gap: 1rem;
     border-right: 1px solid #ccc;
-    min-height: 80vh;
+    height: 85vh;
     overflow-y: auto;
   }
 
   .article {
     width: 70%;
-    padding: 1rem;
+    padding-left: 1rem;
     gap: 1rem;
-    min-height: 80vh;
+    height: 85vh;
   }
